fix: slick slide img vertical align

--- a/src/latest-landing/layout/Footer/Footer.scss
+++ b/src/latest-landing/layout/Footer/Footer.scss
@@ -301,7 +301,7 @@ footer {
 }
 
 .slick-slide a {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
 }
